[FIX] web: Done overlaps three points widget
If the optional field is present, the last th is given padding 15px otherwise padding is kept 0px

--- a/addons/web/static/src/scss/list_view.scss
+++ b/addons/web/static/src/scss/list_view.scss
@@ -256,7 +256,7 @@
     }
 
     // Optional fields
-    &.o_list_optional_columns {
+    &.o_list_optional_columns .o_list_table > thead > tr {
         th:last-child {
             padding-right: 15px;
         }
